# noirid

./: .gitignore  dads  fix.patch  logger_fix.patch  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
NOIRID.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
alembic/versions/: 01263772c3ba_.py  0a1615ca65eb_.py  17cd7e7a27e2_add_email_subscriptions_table.py  1df44e74c7ed_add_payment_status_to_orders.py  214aaddc1b12_add_tracking_number_db.py  2e89353c7e61_add_email_subscriptions_table.py  3b2e9a1f0c24_add_users_table.py  4ca132394efd_paypal_paymeny.py  516db450c016_.py  5c2c3e9f0b6a_add_updated_at_to_orders.py  7081af6472ea_drop_legacy_product_images_tables.py  75216b4748bf_payment_provider_statuses.py  768df386a2fc_add_tracking_number_db.py  7ab9a8ddab7a_init_catalog_and_content.py  7af3361b9dfc_add_preview_url.py  9866b176f075_tracking_send.py  9b5d1d4b0b1e_add_support_questions_and_unassign_product_images.py  9f6c6f0a28fd_make_variants_global.py  aa2f41111c38_ordeк_email_confirm.py  aca980b66068_add_checkout_fields_to_orders.py  b2c1b2c6d2a5_add_product_image_links.py  b4f93d36d86a_add_payments.py  c1d8f1b0a6c2_add_product_images_json.py  c4d80660def3_add_confirmation_email_sent_at_to_order1.py  d0ae79b7364c_add_tracking_nr.py  d195ed4a2214_orders_and_cart.py  d7c952be2d62_discount_added.py  dc4659444c7e_.py  e1a6a12cc074_order_number.py  e35e75a0ee87_add_email_subscriptions_table.py  e46e1dc1c2c7_img_admin_fix.py  ebc234ba1d11_add_confirmation_email_sent_at_to_orders.py  f845bd8ea970_order_number1.py  (+1 more)
app/: main.py
(+103 files in other folders)
