[project]
name = "NOIRID"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "pillow>=12.1.0",
  "itsdangerous>=2.2.0",
  "pydantic[email]",
  "httpx>=0.28.1",
]
